# opencv-yolo-cpp-object-detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.yml
include/: YoloDetector.hpp
src/: ImageProcessor.cpp  YoloDetector.cpp
